# demand-forecasting-landing-pagereal

./: .firebaserc  .gitignore  README.md  authtoken.txt  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  pnpm-lock.yaml  start-dev.sh
.history/: index_20260108164126.html  index_20260108164433.html  package_20260108163855.json  package_20260108164303.json
api/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
api/alembic/: env.py
api/alembic/versions/: 0fcaf29628e4_create_users_and_forecast_runs.py  53c04eba8f31_add_firebase_uid_to_users.py  6c4c2fd36cf7_add_businesses_uploads_sales_facts.py
api/app/: config.py  db.py  main.py
api/app/auth/: deps.py  firebase.py  security.py
api/app/models/: __init__.py  business.py  forecast_run.py  sales_fact.py  upload.py  user.py
api/app/routers/: auth.py  forecast.py  forecast_from_db.py  ingest.py  runs.py
api/app/schemas/: auth.py  ingest.py  runs.py
api/app/services/: business_service.py  forecasting.py
api/demand_navigator_api.egg-info/: PKG-INFO  SOURCES.txt
api/scripts/: init-db.sql  wait-for-db.sh
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/onboarding/: page.tsx
components/: HeroSection.tsx
components/onboarding/: onboarding-wizard.tsx  option-card.tsx
docs/: DEVELOPMENT.md
functions/: .eslintrc.js  .gitignore  package-lock.json  package.json
lib/: onboarding-context.tsx
prophet-service/: Dockerfile  main.py  requirements.txt
src/: App.tsx  index.css
src/api/: ai.ts
(+71 files in other folders)
